# ver2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: VER2026official.json
docs/: bang-for-buck.md  fmfi-summary.md
src/ver2026/: __init__.py  cli.py  dump_json.py  dump_reward_json.py  official_web.py  reward.py
tests/: test_ver2026.py
web/: VER2026data.xlsx  data.json  index.html  robots.txt  sitemap.xml
web/financing/: index.html
web/reward/: data.json  index.html
