[project]
name = "ver2026"
version = "0.1.0"
description = "Browse and sort the Slovak VER 2026 institutional evaluation dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openpyxl>=3.1.5",
]

[project.scripts]
ver2026 = "ver2026.cli:main"
ver2026-dump = "ver2026.dump_json:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ver2026"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
